hoppscotch/k8s/resources/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hopin-http-route
  namespace: hopin
spec:
  # 引用公共网关
  parentRefs:
    - name: shared-gateway
      namespace: nginx-gateway
  hostnames:
    - "hopin.domain"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: CORS
          cors:
            allowOrigins:
              - "https://domain"
              - "https://www.domain"
              - "https://dash.domain"
              - "https://dashboard.domain"
            allowMethods:
              - GET
              - OPTIONS
            allowHeaders:
              - Content-Type
              - Authorization
            allowCredentials: true
      backendRefs:
        - name: hopin-svc
          port: 8091

    - matches:
        - path:
            type: PathPrefix
            value: /proxy
      backendRefs:
        - name: hopin-svc
          port: 9159
